--- a/week1/week1_quiz.Rmd
+++ b/week1/week1_quiz.Rmd
@@ -2,7 +2,9 @@
 ## Question 1 
 Which of the following are steps in building a machine learning algorithm?   
 
-* Estimating parameters
+* Estimating parameters  
+OR  
+* Deciding on an algorithm.
 
 ## Question 2
 Suppose we build a prediction algorithm on a data set and it is 100% accurate
@@ -21,7 +23,9 @@ What are typical sizes for the training and test sets?
 What are some common error rates for predicting binary variables (i.e. variables
 with two possible values like yes/no, disease/normal, clicked/didn't click)?   
 
-* Sensitivity----True Positive/(True Positive + False Negative)
+* Sensitivity----True Positive/(True Positive + False Negative)  
+OR  
+* Specificity
 
 ## Question 5
 The rate the link is clicked is 1/1000 of visits to a website.  
